# afire

./: .gitignore  README.md  pyproject.toml
afire/: __init__.py  __main__.py  completion.py  completion_test.py  core.py  core_test.py  custom_descriptions.py  custom_descriptions_test.py  decorators_test.py  docstrings.py  docstrings_fuzz_test.py  docstrings_test.py  fire_import_test.py  fire_test.py  formatting.py  formatting_test.py  formatting_windows.py  helptext.py  helptext_test.py  inspectutils.py  inspectutils_test.py  interact.py  interact_test.py  main_test.py  parser.py  parser_fuzz_test.py  parser_test.py  test_components.py  test_components_bin.py  test_components_py3.py  test_components_test.py  testutils.py  testutils_test.py  trace.py  trace_test.py  value_types.py
afire/console/: console_attr.py  console_attr_os.py  console_io.py  console_pager.py  encoding.py  files.py
examples/cipher/: cipher.py  cipher_test.py
examples/diff/: diff.py  diff_test.py  difffull.py
examples/widget/: collector.py  collector_test.py  widget.py
fire/: __init__.py  __main__.py  completion.py  completion_test.py  core.py  core_test.py  custom_descriptions.py  custom_descriptions_test.py  decorators.py  decorators_test.py  docstrings_test.py  fire_test.py  formatting_test.py  helptext.py  helptext_test.py  inspectutils.py  inspectutils_test.py  main_test.py  parser_fuzz_test.py  parser_test.py  test_components.py  test_components_py3.py  testutils.py  trace.py  trace_test.py
fire/console/: console_attr_os.py  console_pager.py  files.py  platforms.py
tests/: common.py
