[tool.poetry]
name = "afire"
version = "0.1.0"
description = ""
authors = ["zqqqqz2000 <zqqqqz2000@sina.cn>"]
license = "Apache License Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
